--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "cross-env API_BASE=http://localhost:8000 vite",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.3.7",
     "@tanstack/react-query": "^5.0.0",
+    "@xmtp/browser-sdk": "^5.1.0",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
