--- a/stream-server/.env.example
+++ b/stream-server/.env.example
@@ -1,5 +1,8 @@
 # Environment variables for stream-server
 
+# Application name
+APP_NAME=X402-Gateway
+
 # Muxion API configuration
 GATEWAY_URL=https://gateway.muxion.video
 GATEWAY_API_KEY=muxion-labs-2025
@@ -9,6 +12,9 @@ FACILITATOR_URL=your_facilitator_url_here
 
 # Base RPC URL for Web3 connections
 BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v2/your_api_key
+
+# Network configuration (base or base-sepolia)
+NETWORK=base
 
 # Sweep address for USDC transfers
 SWEEP_ADDRESS=your_sweep_address_here
