--- a/stream-server/package.json
+++ b/stream-server/package.json
@@ -8,15 +8,21 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@xmtp/node-sdk": "^4.4.0",
+    "axios": "^1.5.0",
+    "bad-words-next": "^3.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "web3": "^4.2.2",
     "ethers": "^6.8.0",
-    "axios": "^1.5.0",
-    "uuid": "^9.0.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
     "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0"
+    "uuid": "^9.0.1",
+    "web3": "^4.2.2",
+    "winston": "^3.11.0",
+    "ws": "^8.14.2",
+    "x402-express": "^0.7.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
