--- a/stream-server/package.json
+++ b/stream-server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "helmet": "^7.0.0",
+    "siwe": "^2.3.2",
     "uuid": "^9.0.1",
     "web3": "^4.2.2",
     "winston": "^3.11.0",
