stream-server: updates from testing

--- a/stream-server/.env.example
+++ b/stream-server/.env.example
@@ -1,5 +1,8 @@
 # Environment variables for stream-server
 
+#this address will have access to admin and special styling for messages
+CREATOR_ADDRSS=your_creator_address_here
+
 # Application name
 APP_NAME=X402-Gateway
 
