--- a/stream-server/package.json
+++ b/stream-server/package.json
@@ -5,19 +5,22 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "mocha tests/test_enhanced_auth.js"
   },
   "dependencies": {
     "@xmtp/node-sdk": "^4.4.0",
     "axios": "^1.5.0",
     "bad-words-next": "^3.1.1",
     "body-parser": "^1.20.2",
+    "chai": "^6.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ethers": "^6.8.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "helmet": "^7.0.0",
+    "mocha": "^11.7.5",
     "siwe": "^2.3.2",
     "uuid": "^9.0.1",
     "web3": "^4.2.2",
