--- a/stream-server/.env.example
+++ b/stream-server/.env.example
@@ -2,22 +2,22 @@
 
 #this address will have access to admin and special styling for messages
 CREATOR_ADDRSS=your_creator_address_here
+# Sweep address for USDC transfers
+SWEEP_ADDRESS=your_sweep_address_here (for security better to have separate address from creator address)
 
 # Application name
-APP_NAME=X402-Gateway
+APP_NAME=X402-Stream-Server
 
 # Muxion API configuration
 GATEWAY_URL=https://gateway.muxion.video
 GATEWAY_API_KEY=muxion-labs-2025
 
 # Facilitator configuration
-FACILITATOR_URL=your_facilitator_url_here
-
-# Base RPC URL for Web3 connections
-BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v2/your_api_key
+FACILITATOR_URL=https://facilitator.payai.network
 
 # Network configuration (base or base-sepolia)
 NETWORK=base
+# Base RPC URL for Web3 connections
+BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v2/your_api_key
 
-# Sweep address for USDC transfers
-SWEEP_ADDRESS=your_sweep_address_here
+
