stream-server: various updates from testing

--- a/stream-server/.env.example
+++ b/stream-server/.env.example
@@ -1,4 +1,5 @@
 # Environment variables for stream-server
+STREAM_DESCRIPTION=Your stream description here
 
 #this address will have access to admin and special styling for messages
 CREATOR_ADDRSS=your_creator_address_here
@@ -8,7 +9,7 @@ SWEEP_ADDRESS=your_sweep_address_here (for security better to have separate addr
 # Application name
 APP_NAME=X402-Stream-Server
 
-# Muxion API configuration
+# Livepeer gateway configuration
 GATEWAY_URL=https://gateway.muxion.video
 GATEWAY_API_KEY=muxion-labs-2025
 
