stream-server: rename BASE_RPC_URL to RPC_URL

--- a/stream-server/.env.example
+++ b/stream-server/.env.example
@@ -2,7 +2,7 @@
 STREAM_DESCRIPTION=Your stream description here
 
 #this address will have access to admin and special styling for messages
-CREATOR_ADDRSS=your_creator_address_here
+CREATOR_ADDRESS=your_creator_address_here
 # Sweep address for USDC transfers
 SWEEP_ADDRESS=your_sweep_address_here (for security better to have separate address from creator address)
 
@@ -19,6 +19,6 @@ FACILITATOR_URL=https://facilitator.payai.network
 # Network configuration (base or base-sepolia)
 NETWORK=base
 # Base RPC URL for Web3 connections
-BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v2/your_api_key
+RPC_URL=https://base-mainnet.g.alchemy.com/v2/your_api_key
 
 
