--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "x402-streaming-app",
+  "name": "infinite-streaming-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,20 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^1.3.7",
-    "@tanstack/react-query": "^5.0.0",
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "@tanstack/react-query": "^5.90.12",
     "@xmtp/browser-sdk": "^5.1.0",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "siwe": "^3.0.0",
-    "wagmi": "^1.4.13"
+    "wagmi": "^2.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "cross-env": "^10.1.0",
-    "vite": "^4.4.5"
+    "vite": "^7.2.7"
   }
 }
