--- a/stream-server/package.json
+++ b/stream-server/package.json
@@ -9,6 +9,7 @@
     "test": "mocha tests/test_enhanced_auth.js"
   },
   "dependencies": {
+    "iron-session": "^8.0.0",
     "@xmtp/node-sdk": "^4.4.0",
     "axios": "^1.5.0",
     "bad-words-next": "^3.1.1",
