--- a/stream-server/package.json
+++ b/stream-server/package.json
@@ -27,7 +27,9 @@
     "web3": "^4.2.2",
     "winston": "^3.11.0",
     "ws": "^8.14.2",
-    "x402-express": "^0.7.3"
+    "x402-express": "^0.7.3",
+    "socket.io": "^4.7.4",
+    "simple-peer": "^9.11.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
