--- a/worker/Dockerfile.worker
+++ b/worker/Dockerfile.worker
@@ -13,6 +13,7 @@ RUN curl -LsSf https://astral.sh/uv/install.sh | sh \
 # Configure uv to use venv in /opt/venv
 ENV UV_PYTHON=python3 \
     UV_PROJECT_ENVIRONMENT=/opt/venv \
+    UV_HTTP_TIMEOUT=600 \
     PATH="/opt/venv/bin:${PATH}" \
     PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
@@ -25,7 +26,7 @@ WORKDIR /app
 RUN uv venv "$UV_PROJECT_ENVIRONMENT"
 
 RUN uv pip install --upgrade pip packaging wheel setuptools && \
-    uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128 
+    uv pip install torch==2.9.0 torchvision --index-url https://download.pytorch.org/whl/cu128 
 
 #install flash attn if needed
 #RUN apt-get install -y --no-install-recommends cuda-toolkit-12-8 && \
