--- a/stream-server/package.json
+++ b/stream-server/package.json
@@ -9,7 +9,6 @@
     "test": "mocha tests/test_enhanced_auth.js"
   },
   "dependencies": {
-    "iron-session": "^8.0.0",
     "@xmtp/node-sdk": "^4.4.0",
     "axios": "^1.5.0",
     "bad-words-next": "^3.1.1",
@@ -21,15 +20,17 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "helmet": "^7.0.0",
+    "iron-session": "^8.0.0",
+    "leo-profanity": "^1.8.0",
     "mocha": "^11.7.5",
+    "simple-peer": "^9.11.1",
     "siwe": "^2.3.2",
+    "socket.io": "^4.7.4",
     "uuid": "^9.0.1",
     "web3": "^4.2.2",
     "winston": "^3.11.0",
     "ws": "^8.14.2",
-    "x402-express": "^0.7.3",
-    "socket.io": "^4.7.4",
-    "simple-peer": "^9.11.1"
+    "x402-express": "^0.7.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
